--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -3,7 +3,8 @@ name: Tests on all platforms with linting
 # TODO: change from push to pull request
 on: [push]
 
-testing:
+jobs:
+  testing:
     # needs: linting
     runs-on: ${{ matrix.os}}
     concurrency:
