--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -12,8 +12,10 @@ jobs:
       cancel-in-progress: true
     strategy:
       matrix:
-        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
-        os: [windows-latest, ubuntu-latest]
+        # python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
+        python-version: ['3.10']
+        # os: [windows-latest, ubuntu-latest]
+        os: [ubuntu-latest]
 
       max-parallel: 20
     steps:
@@ -41,4 +43,4 @@ jobs:
     #   run:  python tests/setup_windows_spatialite.py
 
     - name: Runs test
-      run: pytest tests/ --durations=50 --dist=loadscope -n 4 --random-order --verbose
+      run: pytest tests/ --durations=50 --verbose
