--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -12,10 +12,10 @@ jobs:
       cancel-in-progress: true
     strategy:
       matrix:
-        # python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
-        python-version: ['3.10']
-        # os: [windows-latest, ubuntu-latest]
-        os: [ubuntu-latest]
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
+        # python-version: ['3.10']
+        os: [windows-latest, ubuntu-latest]
+        # os: [ubuntu-latest]
 
       max-parallel: 20
     steps:
