--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,41 +1,41 @@
-name: Documentation
+# name: Documentation
 
-on: push
+# on: [pull request]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 1
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.10'
-        architecture: x64
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     strategy:
+#       max-parallel: 1
+#     steps:
+#     - uses: actions/checkout@v4
+#     - name: Set up Python 3.10
+#       uses: actions/setup-python@v5
+#       with:
+#         python-version: '3.10'
+#         architecture: x64
   
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt install -y latexmk texlive-xetex fonts-freefont-otf xindy
-        pip install uv
-        python -m uv pip install wheel openmatrix pytest
+    # - name: Install dependencies
+    #   run: |
+    #     sudo apt-get update
+    #     sudo apt install -y latexmk texlive-xetex fonts-freefont-otf xindy
+    #     pip install uv
+    #     python -m uv pip install wheel openmatrix pytest
         # python -m uv pip install -r requirements.txt
         # python -m uv pip install -r docs/requirements-docs.txt
 
-    - name: Compile library
-      run: |
-        python -m uv pip install .
+    # - name: Compile library
+    #   run: |
+        # python -m uv pip install .
 
-    - name: Check history of versions
-      run: |
+    # - name: Check history of versions
+    #   run: |
           # python docs/table_documentation.py
           # python docs/create_docs_data.py
           # python docs/website/check_documentation_versions.py
 
-    - name: Test docstrings
-      run: |
+    # - name: Test docstrings
+    #   run: |
         # python -m pytest --doctest-modules aequilibrae/distribution --ignore=aequilibrae/distribution/setup_ipf.py
         # python -m pytest --doctest-modules aequilibrae/matrix
         # python -m pytest --doctest-modules aequilibrae/paths --ignore=aequilibrae/paths/setup_assignment.py
@@ -46,8 +46,8 @@ jobs:
         # python -m pytest --doctest-glob=*.rst docs/source/traffic_assignment
         # python -m pytest --doctest-glob=*.rst docs/source/public_transport
 
-    - name: Build documentation
-      run: |
+    # - name: Build documentation
+    #   run: |
         # jupyter nbconvert --to rst docs/source/distribution_procedures/IPF_benchmark.ipynb
         # sphinx-build -b latex docs/source docs/source/_static/latex -D plot_gallery=False
         # cd docs/source/_static/latex
