--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -12,10 +12,8 @@ jobs:
       cancel-in-progress: true
     strategy:
       matrix:
-        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
-        # python-version: ['3.10']
+        python-version: ['3.10', '3.11', '3.12', '3.13']
         os: [windows-latest, ubuntu-latest]
-        # os: [ubuntu-latest]
 
       max-parallel: 20
     steps:
@@ -28,19 +26,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip uv
         python -m uv pip install -e .[dev]
-
-    # - name: Download spatialite on Linux
-    #   if: matrix.os == 'ubuntu-latest'
-    #   run: |
-    #     sudo apt update
-    #     sudo apt install libsqlite3-mod-spatialite
-    #     sudo apt install -y libspatialite-dev
-    #     pip3 install spatialite
-    #     sudo ln -s /usr/lib/x86_64-linux-gnu/mod_spatialite.so /usr/lib/x86_64-linux-gnu/mod_spatialite
-
-    # - name: Download spatialite on Windows
-    #   if: matrix.os == 'windows-latest'
-    #   run:  python tests/setup_windows_spatialite.py
 
     - name: Runs test
       run: pytest tests/ --durations=50 --verbose
