--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip uv
         python -m uv pip install -e .[dev]
+        python -m uv pip install coverage pytest-cov
 
     - name: Runs test
-      run: pytest tests/ --durations=50 --verbose
+      run: pytest tests/ --durations=50 --verbose --cov=. --cov-report=term # --cov-report=xml
