--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -30,5 +30,4 @@ jobs:
 
     - name: Runs test
       # run: pytest tests/ --durations=50 --verbose --cov=. --cov-report=term # --cov-report=xml
-      run: pytest --cov-report=term-missing markdown-append:$GITHUB_STEP_SUMMARY
-                  --cov=myproj --cov=. tests/
+      run: pytest --cov=. tests/ --cov-report=term-missing markdown-append:$GITHUB_STEP_SUMMARY
