Change pytest run line in ci by adding cov-report flag to github markdown append

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -30,4 +30,4 @@ jobs:
 
     - name: Runs test
       # run: pytest tests/ --durations=50 --verbose --cov=. --cov-report=term # --cov-report=xml
-      run: pytest --cov=. tests/ --cov-report=term-missing markdown-append:$GITHUB_STEP_SUMMARY
+      run: pytest --cov=. tests/ --cov-report=term-missing --cov-report=markdown-append:$GITHUB_STEP_SUMMARY
