--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -28,5 +28,10 @@ jobs:
         python -m uv pip install -e .[dev]
         python -m uv pip install coverage pytest-cov
 
-    - name: Runs test
-      run: pytest --cov=. tests/ --cov-report=term-missing --durations=50 --verbose
+    - name: Runs test (Linux)
+      if matrix.os == "ubuntu-latest"
+      run: pytest --cov=. tests/ --cov-report=term-missing --cov-report markdown-append:$GITHUB_STEP_SUMMARY --durations=50 --verbose
+
+    - name: Runs test (Windows)
+      if matrix.os == "windows-latest"
+      run: pytest --cov=. tests/ --cov-report=term-missing --cov-report markdown-append:$env:GITHUB_STEP_SUMMARY --durations=50 --verbose
