--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -29,9 +29,9 @@ jobs:
         python -m uv pip install coverage pytest-cov
 
     - name: Runs test (Linux)
-      if: matrix.os == "ubuntu-latest"
+      if: matrix.os == 'ubuntu-latest'
       run: pytest --cov=. tests/ --cov-report=term-missing --cov-report markdown-append:$GITHUB_STEP_SUMMARY --durations=50 --verbose
 
     - name: Runs test (Windows)
-      if: matrix.os == "windows-latest"
+      if: matrix.os == 'windows-latest'
       run: pytest --cov=. tests/ --cov-report=term-missing --cov-report markdown-append:$env:GITHUB_STEP_SUMMARY --durations=50 --verbose
