--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -24,3 +24,26 @@ jobs:
 
       - name: Lint with ruff
         run: ruff check --output-format=github .
+  coverage:
+    needs: linting
+    runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set Python environment
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+          architecture: x64
+      - name: Install dependencies
+        run: |
+          python -m uv pip install coverage pytest-cov
+      
+      - name: Run coverage tests
+        run: pytest --cov=. tests/ --cov-branch --cov-report=term-missing --cov-report markdown-append:$GITHUB_STEP_SUMMARY --durations=50 --verbose
+      - uses: actions/upload-artifact@v4
+        with: 
+          name: html-coverage-artifact
+          path: ./cov_html/
