--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -39,10 +39,12 @@ jobs:
           architecture: x64
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
+          python -m pip install uv
           python -m uv pip install coverage pytest-cov
       
       - name: Run coverage tests
-        run: pytest --cov=. tests/ --cov-branch --cov-report=term-missing --cov-report markdown-append:$GITHUB_STEP_SUMMARY --durations=50 --verbose
+        run: pytest --cov=. tests/ --cov-branch --cov-report=term-missing --cov-report html:cov_html --cov-report markdown-append:$GITHUB_STEP_SUMMARY --durations=50 --verbose
       - uses: actions/upload-artifact@v4
         with: 
           name: html-coverage-artifact
