--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -42,6 +42,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install uv
           python -m uv pip install coverage pytest-cov
+          python -m uv pip install -e .[dev]
       
       - name: Run coverage tests
         run: pytest --cov=. tests/ --cov-branch --cov-report=term-missing --cov-report html:cov_html --cov-report markdown-append:$GITHUB_STEP_SUMMARY --durations=50 --verbose
