--- a/.github/workflows/linting_and_coverage.yml
+++ b/.github/workflows/linting_and_coverage.yml
@@ -39,8 +39,8 @@ jobs:
           architecture: x64
       - name: Install dependencies
         run: |
-          # python -m pip install --upgrade pip
-          # python -m pip install uv
+          python -m pip install --upgrade pip
+          python -m pip install uv
           python -m uv pip install coverage pytest-cov
           python -m uv pip install -e .[dev]
       
