Add coverage to pytest in CI. Uses default view (#39)
Co-authored-by: Tyler Pearn <tyler@outerloop.io>
Co-authored-by: Jake Moss <jake@outerloop.io>

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -26,6 +26,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip uv
         python -m uv pip install -e .[dev]
-
-    - name: Runs test
+    
+    - name: Run tests on all versions and operating systems
       run: pytest tests/ --durations=50 --verbose
+
+
+
+    
