--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -26,6 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip uv
         python -m uv pip install -e .[dev]
+        python -m uv pip install pytest-xdist
 
     - name: Runs test
       run: pytest -n 3 tests/system_tests/ --durations=50 --verbose
