--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -1,33 +1,33 @@
-name: System tests on all platforms
+# name: System tests on all platforms
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  testing:
-    # needs: linting
-    runs-on: ${{ matrix.os}}
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}-${{ matrix.os }}-${{ matrix.python-version }}
-      cancel-in-progress: true
-    strategy:
-      matrix:
-        python-version: ['3.10', '3.11', '3.12', '3.13']
-        os: [windows-latest, ubuntu-latest]
+# jobs:
+#   testing:
+#     # needs: linting
+#     runs-on: ${{ matrix.os}}
+#     concurrency:
+#       group: ${{ github.workflow }}-${{ github.ref }}-${{ matrix.os }}-${{ matrix.python-version }}
+#       cancel-in-progress: true
+#     strategy:
+#       matrix:
+#         python-version: ['3.10', '3.11', '3.12', '3.13']
+#         os: [windows-latest, ubuntu-latest]
 
-      max-parallel: 20
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set Python environment
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip uv
-        python -m uv pip install -e .[dev]
+#       max-parallel: 20
+#     steps:
+#     - uses: actions/checkout@v4
+#     - name: Set Python environment
+#       uses: actions/setup-python@v5
+#       with:
+#         python-version: ${{ matrix.python-version }}
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip uv
+#         python -m uv pip install -e .[dev]
 
-    - name: Runs test
-      run: pytest tests/system_tests/ --durations=50 --verbose
+#     - name: Runs test
+#       run: pytest tests/system_tests/ --durations=50 --verbose
