another attempt at relative margin of error

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -28,7 +28,7 @@ jobs:
         python -m uv pip install -e .[dev]
     
     - name: Run tests on all versions and operating systems
-      run: pytest tests/unit_tests/test__optimize.py --durations=50 --verbose
+      run: pytest tests/unit_tests/ --durations=50 --verbose
 
 
 
