--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -9,16 +9,28 @@ jobs:
       max-parallel: 1
     steps:
     # - uses: actions/checkout@v4
-    - name: Build static files
-      id: build
-      run: |
-       make html
+      - uses: actions/checkout@v4
+      - name: Set Python environment
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+          architecture: x64
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install uv
+          python -m uv pip install . --group docs
 
-    - name: Upload static files as artifact
-      id: deployment
-      uses: actions/upload-pages-artifact@v3 # or specific "vX.X.X" version tag for this action
-      with:
-        path: docs/_build
+      - name: Build static files
+        id: build
+        run: |
+         sphinx-build -M html docs docs/_build
+  
+      - name: Upload static files as artifact
+        id: deployment
+        uses: actions/upload-pages-artifact@v3 # or specific "vX.X.X" version tag for this action
+        with:
+          path: docs/_build
 # Deployment job
   deploy:
     environment:
