Attempt to ad write permissions to GITHUB_TOKEN using id-token: write in documentation CI

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -5,10 +5,13 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+    #   contents: write
+    #   pages: write       # GitHub Pages deployment?
+      id-token: write
     strategy:
       max-parallel: 1
     steps:
-    # - uses: actions/checkout@v4
       - uses: actions/checkout@v4
       - name: Set Python environment
         uses: actions/setup-python@v5
