Change deployment location to avoid intemediary html directory by updating path in documentation CI

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -33,7 +33,7 @@ jobs:
         id: deployment
         uses: actions/upload-pages-artifact@v3 # or specific "vX.X.X" version tag for this action
         with:
-          path: docs/_build
+          path: docs/_build/html
 # Deployment job
   deploy:
     environment:
