Change readme and add it to documentation. Change autosummary in documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ tests = [
 docs = [
     'sphinx',
     'pydata-sphinx-theme',
-    'myst-parser'
+    'myst-parser',
 ]
 dev = ['jaxlogit[linting, devtools, tests]']
 
