updat pyproject.toml dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
     'numpy',
     'pandas',
     'scipy',
-    'optimistix',
+    'xlogit',
+    'scikit-learn',
 ]
 
 [project.optional-dependencies]
