Add jupytext to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ docs = [
     'pydata-sphinx-theme',
     'myst-parser',
     'nbsphinx',
-    'nbsphinx-link'
+    'jupytext',
 ]
 dev = ['jaxlogit[linting, devtools, tests]']
 
