--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           python-version: 3.11
           architecture: x64
+      - name: Install pandoc
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pandoc
+          
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
