--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -1,7 +1,9 @@
-name: Unit tests on all platforms
+name: System tests on all platforms
 
-# TODO: change from push to pull request
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   testing:
@@ -26,10 +28,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip uv
         python -m uv pip install -e .[dev]
-    
-    - name: Run tests on all versions and operating systems
-      run: pytest tests/unit_tests/ --durations=50 --verbose
 
-
-
-    
+    - name: Runs test
+      run: pytest tests/system_tests/ --durations=50 --verbose
