--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,11 @@ dependencies = [
     'numpy',
     'pandas',
     'scipy',
-    'optimistix',
     'regex',
 ]
+
+[dependency-groups]
+examples = ['xlogit', 'scikit-learn']
 
 [project.optional-dependencies]
 
