Documentation using Sphinx (#52)
Co-authored-by: Tyler Pearn <tyler@outerloop.io>
Co-authored-by: Jake Moss <jake@outerloop.io>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,16 @@ devtools = [
 tests = [
     'pytest',
 ]
+
+docs = [
+    'sphinx',
+    'pydata-sphinx-theme',
+    'myst-parser',
+    'nbsphinx',
+    'jupytext',
+    'ipykernel',
+    'biogeme',
+]
 dev = ['jaxlogit[linting, devtools, tests]']
 
 [tool.black]
