--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [build-system]
-requires = ["hatchling >= 1.26"]
-build-backend = "hatchling.build"
 
 # project metadata
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 [project]
 name = "jaxlogit"
 description = "MSLE estimation of linear-in-parameters logit kernel models"
@@ -29,6 +29,7 @@ dependencies = [
     'scipy',
     'regex',
 ]
+dynamic = ["version"]
 
 [dependency-groups]
 
@@ -116,3 +117,5 @@ dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [tool.ruff.lint.mccabe]
 max-complexity = 20
+
+[tool.hatch]
