Move scikit learn dependency in pyproject.toml to be in the docs grouping only

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ docs = [
     'jupytext',
     'ipykernel',
     'biogeme',
+    'scikit-learn',
 ]
 dev = ['jaxlogit[linting, devtools, tests]']
 
