Change system tests to be on push on main only, was disabled for testing in this branch

--- a/.github/workflows/system_tests.yml
+++ b/.github/workflows/system_tests.yml
@@ -1,11 +1,9 @@
 name: System tests on all platforms
 
-# on:
-#   push:
-#     branches:
-#       - main
-
-on: push
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   testing:
